--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -627,7 +627,11 @@
                 alert('Auto refresh disabled');
             }
         });
-        
+
+            // Check if user is logged in
+            if (!sessionStorage.getItem('userToken')) {
+                window.location.href = 'index.html';
+            }
         // Logout button
         document.getElementById('logoutBtn').addEventListener('click', function() {
             if (confirm('Are you sure you want to logout?')) {
